--- a/package.json
+++ b/package.json
@@ -1,25 +1,25 @@
 {
-  "name": "vsts-changed-files",
-  "version": "1.1.2",
+  "name": "vsts-changed-files-multibranch",
+  "version": "2.0.0",
   "description": "Azure DevOps pipeline task to get changed files since last build",
-  "author": "Touchify (dev@touchify.co)",
+  "author": "MohamedElhabib",
   "license": "MIT",
   "private": true,
   "main": "index.js",
-  "homepage": "https://github.com/touchifyapp/vsts-changed-files#readme",
+  "homepage": "https://github.com/mohamedelhabib/vsts-changed-files-multibranch#readme",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/touchifyapp/vsts-changed-files.git"
+    "url": "git+https://github.com/mohamedelhabib/vsts-changed-files-multibranch.git"
   },
   "bugs": {
-    "url": "https://github.com/touchifyapp/vsts-changed-files/issues"
+    "url": "https://github.com/mohamedelhabib/vsts-changed-files-multibranch/issues"
   },
   "scripts": {
     "build": "tsc -p .",
     "test": "npm run lint && npm run build && jest",
     "jest": "jest",
     "lint": "eslint --ext ts changed-files/**/*.ts",
-    "pack": "npm run build && npm run pack:modules && npm run pack:extension && npm run pack:clean",
+    "pack": "npm run build && npm run test && npm run pack:modules && npm run pack:extension && npm run pack:clean",
     "pack:modules": "cp package.json changed-files && cp package-lock.json changed-files && cd changed-files && npm ci --prod",
     "pack:extension": "tfx extension create --manifest-globs vss-extension.json",
     "pack:clean": "rm changed-files/package.json && rm changed-files/package-lock.json && rm -r changed-files/node_modules",
@@ -28,22 +28,22 @@
     "postversion": "git push && git push --tags"
   },
   "dependencies": {
-    "azure-devops-node-api": "^10.1.1",
-    "azure-pipelines-task-lib": "^2.9.5",
+    "azure-devops-node-api": "^11.0.1",
+    "azure-pipelines-task-lib": "^3.1.4",
     "minimatch": "^3.0.4"
   },
   "devDependencies": {
-    "@types/jest": "^26.0.0",
-    "@types/minimatch": "^3.0.3",
-    "@types/node": "^12.12.47",
-    "@types/q": "^1.5.4",
-    "@typescript-eslint/eslint-plugin": "^3.2.0",
-    "@typescript-eslint/parser": "^3.2.0",
-    "eslint": "^7.2.0",
-    "jest": "^26.0.1",
-    "nock": "^12.0.3",
+    "@types/jest": "^26.0.24",
+    "@types/minimatch": "^3.0.5",
+    "@types/node": "^16.3.1",
+    "@types/q": "^1.5.5",
+    "@typescript-eslint/eslint-plugin": "^4.28.2",
+    "@typescript-eslint/parser": "^4.28.2",
+    "eslint": "^7.30.0",
+    "jest": "^27.0.6",
+    "nock": "^13.1.1",
     "sync-request": "^6.1.0",
-    "ts-jest": "^26.1.0",
-    "typescript": "^3.9.5"
+    "ts-jest": "^27.0.3",
+    "typescript": "^4.0.2"
   }
 }
