--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "pack:extension": "tfx extension create --manifest-globs vss-extension.json",
     "pack:clean": "rm changed-files/package.json && rm changed-files/package-lock.json && rm -r changed-files/node_modules",
     "preversion": "npm test",
-    "version": "node scripts/version.js && git add .",
+    "version": "node scripts/version.js && git add package-lock.json package.json changed-files/task.json vss-extension.json",
     "postversion": "git push && git push --tags"
   },
   "dependencies": {
