--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "lint": "eslint --ext ts changed-files/**/*.ts",
     "pack": "npm run build && npm run test && npm run pack:modules && npm run pack:extension && npm run pack:clean",
     "pack:modules": "cp package.json changed-files && cp package-lock.json changed-files && cd changed-files && npm ci --prod",
-    "pack:extension": "tfx extension create --manifest-globs vss-extension.json",
+    "pack:extension": "tfx extension create --manifest-globs vss-extension.json --output-path vsts-changed-files-multibranch.vsix",
     "pack:clean": "rm changed-files/package.json && rm changed-files/package-lock.json && rm -r changed-files/node_modules",
     "preversion": "npm test",
     "version": "node scripts/version.js && git add package-lock.json package.json changed-files/task.json vss-extension.json",
